# chess-rs

./: .gitignore  Cargo.toml
src/: ai.rs  chess.rs  game.rs  lib.rs  logic.rs  main.rs
