[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ui"

[[bin]]
name = "uci"

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
image = "0.25"
include_dir = "0.7.4"
itertools = "0.14.0"
mimalloc = "0.1.46"
rand = "0.9.0"
rayon = "1.10.0"
strum = "0.27.1"
strum_macros = "0.27.1"
